Sticky header navigation on tablets solved

--- a/assets/organisms/navigation.scss
+++ b/assets/organisms/navigation.scss
@@ -194,7 +194,7 @@
   @include border-thin;
   
   section {
-    &.logo, &.mobile-menu {
+    &.logo, &.mobile-menubar {
       @include grid(2, 2);
     }
   }
